--- a/src/bin/translations/example-translations-extracted/extraction-summary.json
+++ b/src/bin/translations/example-translations-extracted/extraction-summary.json
@@ -6,21 +6,13 @@
     {
       "file": "utils/web/errorUtils.ts",
       "component": "utils/web/errorUtils",
-      "languages": [
-        "en",
-        "de",
-        "fr"
-      ],
+      "languages": ["en", "de", "fr"],
       "keyCount": 3
     },
     {
       "file": "app/eu/[language]/messages.ts",
       "component": "app/eu/[language]/messages",
-      "languages": [
-        "en",
-        "de",
-        "fr"
-      ],
+      "languages": ["en", "de", "fr"],
       "keyCount": 15
     }
   ]
